# WORKSHOP-DEMO

./: LICENSE  README.md
livekit-voice-agent/: .env.example  agent.py  livekit.toml  pyproject.toml  requirements.txt
