[project]
name = "livekit-voice-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "httpx>=0.28.1",
    "livekit-agents[mcp,turn-detector]>=1.5.1",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "livekit-plugins-silero>=1.5.1",
    "livekit-plugins-turn-detector>=1.5.1",
    "livekit-plugins-deepgram>=1.5.2",
    "livekit-plugins-groq>=1.5.2",
    "livekit-plugins-murf>=0.1.1",
    "livekit-plugins-openai>=1.5.2",
    "python-dotenv>=1.2.2",
]
